<resources>
    <string name="app_name">GestorDeTiendas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home_datos">INGRESE SUS DATOS</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login_text">L O G  I N</string>
    <string name="login_email">Correo Electrónico</string>
    <string name="login_password">Contraseña</string>"
    <string name="login_button">Iniciar Sesión</string>
    <string name="login_register">¿No tienes una cuenta? Registrate</string>
    <string name="login_back">Regresar</string>
    <!-- Strings Register -->
    <string name="register_title">S I G N  U P</string>
    <string name="register_name">Nombre de Usuario</string>
    <string name="register_email">Correo Electrónico</string>
    <string name="register_phone">Número de Teléfono</string>
    <string name="register_password">Contraseña</string>"
    <string name="register_confirm_password">Confirme su contraseña</string>"
    <string name="register_button">Registrarse</string>
    <string name="register_login">Ya tengo una cuenta. Iniciar Sesión</string>
    <string name="register_back">Regresar</string>

</resources>