<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.view.LoginFragment">

    <TextView
        android:id="@+id/LoginTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/loginEditTextEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:maxWidth="480dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/login_email"
        android:autofillHints="emailAddress"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/LoginTittle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/loginEditTextPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:maxWidth="480dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:autofillHints="emailAddress"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/loginEditTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/loginButtonBack"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/login_back"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginEditTextPassword"
        />

    <Button
        android:id="@+id/loginButtonLogin"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:text="@string/login_button"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginEditTextPassword"
 />


    <Button
        android:id="@+id/loginButtonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:layout_marginTop="30dp"
        android:textColor="#bb87fd"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/loginButtonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/loginLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/loginEditTextPassword"
        app:layout_constraintStart_toStartOf="@+id/loginEditTextPassword"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>